# chrome-devtool-mcp-bridge

./: .gitignore  Cargo.toml  Dockerfile.bridge  Dockerfile.build  Dockerfile.devtool  README.md  docker-compose.yml
.aarch64-machine/: Dockerfile.bridge  Dockerfile.devtool  docker-compose.yml
.scripts/: build-aarch64-speed.sh  build-aarch64.sh
src/: handlers.rs  main.rs  process.rs  session.rs
