[package]
name = "mcp-server-bridge"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mcp-server-bridge"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
clap = { version = "4", features = ["derive", "env"] }
futures-util = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }
anyhow = "1"
tokio-util = { version = "0.7", features = ["codec", "io"] }
dashmap = "5"
axum-extra = { version = "0.9", features = ["typed-header"] }
headers = "0.4"
serde_urlencoded = "0.7"
tower-http = { version = "0.5", features = ["cors"] }
